[gd_scene load_steps=2 format=3 uid="uid://mh8qb7w4ndgf"]

[ext_resource type="Script" uid="uid://737m26ps68ii" path="res://Scripts/SongSelect.gd" id="1_gr4uf"]

[node name="SongSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gr4uf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 293.0
offset_top = 164.0
offset_right = 857.0
offset_bottom = 505.0

[node name="TetrisButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tetris"

[node name="SonicButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sonic"

[node name="PacManButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PacMan"

[node name="AKAIButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "AKAI"
